--- a/src/ui/AppRoute.pug
+++ b/src/ui/AppRoute.pug
@@ -1,7 +1,5 @@
 script.
 	import api from '../api/index.js'
-
-	import AppRouteUnsupported from './AppRouteUnsupported.pug'
 	
 	import CollectionAvatar from './component/feed/collection/CollectionAvatar.pug'
 	import CollectionInfo from './component/feed/collection/CollectionInfo.pug'
@@ -34,13 +32,29 @@ main#app-main-content
 				{#key post.focus_comment_parent_count}
 					Post(comments_sort={post.comments_sort} expanded={true} focus_comment_parent_count={post.focus_comment_parent_count} focus_comment_id={post.focus_comment_id} id={post.id})
 	{:else if feed}
-		{#key feed.collection_id}
-			{#key feed.multireddit_name}
-				{#key feed.subreddit_name}
-					{#key feed.user_name}
-						FeedSummary(collection_id={feed.collection_id} multireddit_name={feed.multireddit_name} subreddit_name={feed.subreddit_name} user_name={feed.user_name})
-	{:else}
-		AppRouteUnsupported(url={location})
+		#app-feed-content
+			{#key feed.collection_id}
+				{#key feed.multireddit_name}
+					{#key feed.subreddit_name}
+						{#key feed.user_name}
+							FeedSummary(collection_id={feed.collection_id} multireddit_name={feed.multireddit_name} subreddit_name={feed.subreddit_name} user_name={feed.user_name})
+			menu#app-feed-options
+				{#key feed.type}
+					{#key feed.subreddit_name}
+						FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name} wikipage_name={wiki?.page_name})
+				{#if feed.sort === 'search'}
+					{#key feed.subreddit_name}
+						FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
+			{#key feed.collection_id}
+				{#key feed.filter}
+					{#key feed.multireddit_name}
+						{#key feed.search_sort}
+							{#key feed.search_text}
+								{#key feed.sort}
+									{#key feed.subreddit_name}
+										{#key feed.time_range}
+											{#key feed.user_name}
+												Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
 {#if !wiki}
 	aside#app-secondary-content
 		{#if post?.id}
@@ -60,84 +74,85 @@ main#app-main-content
 			{#key feed.user_name}
 				UserInfo(name={feed.user_name})
 nav#app-main-navigation
-	menu#app-feed-navigation
-		{#if feed?.type === 'multireddit_posts' || feed?.type === 'subreddit_posts' || feed?.type === 'user_posts' || wiki?.page_name}
-			{#if feed.type === 'collection_posts'}
-				{#key feed.collection_id}
-					CollectionAvatar(id={feed.collection_id})
-			{#if feed.type === 'multireddit_posts'}
-				{#key feed.user_name}
-					{#key feed.multireddit_name}
-						MultiredditAvatar(multireddit_name={feed.multireddit_name} user_name={feed.user_name})
-			{:else if feed.type === 'subreddit_posts' || wiki?.page_name}
-				{#key feed.subreddit_name}
-					SubredditAvatar(name={feed.subreddit_name})
-			{:else if feed.type === 'user_posts'}
-				{#key feed.user_name}
-					UserAvatar(name={feed.user_name})
-			{#key feed.type}
-				{#key feed.subreddit_name}
-					FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name} wikipage_name={wiki?.page_name})
 	{#if feed}
-		{#if feed.sort === 'search'}
-			{#key feed.subreddit_name}
-				FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
-		{#key feed.collection_id}
-			{#key feed.filter}
-				{#key feed.multireddit_name}
-					{#key feed.search_sort}
-						{#key feed.search_text}
-							{#key feed.sort}
-								{#key feed.subreddit_name}
-									{#key feed.time_range}
-										{#key feed.user_name}
-											Feed(align='end' collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
+		menu#app-feed-navigation
+			{#if feed?.type === 'multireddit_posts' || feed?.type === 'subreddit_posts' || feed?.type === 'user_posts' || wiki?.page_name}
+				{#if feed.type === 'collection_posts'}
+					{#key feed.collection_id}
+						CollectionAvatar(id={feed.collection_id} size='large')
+				{#if feed.type === 'multireddit_posts'}
+					{#key feed.user_name}
+						{#key feed.multireddit_name}
+							MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
+				{:else if feed.type === 'subreddit_posts' || wiki?.page_name}
+					{#key feed.subreddit_name}
+						SubredditAvatar(name={feed.subreddit_name} size='large')
+				{:else if feed.type === 'user_posts'}
+					{#key feed.user_name}
+						UserAvatar(name={feed.user_name} size='large')
+		{#if post || wiki}
+			{#key feed.collection_id}
+				{#key feed.filter}
+					{#key feed.multireddit_name}
+						{#key feed.search_sort}
+							{#key feed.search_text}
+								{#key feed.sort}
+									{#key feed.subreddit_name}
+										{#key feed.time_range}
+											{#key feed.user_name}
+												Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
+	{:else}
+		a(href='/')
+			img#app-home-icon(alt='Reddit logo' src='/reddit_logo.svg')
 
 style.
+	#app-feed-content
+		align-items flex-start
+		display flex
+		flex-flow column nowrap
+		gap 2em
 	#app-feed-navigation
 		align-items center
 		display flex
 		gap 1em
 		justify-content flex-end
+	#app-feed-options
+		display flex
+		gap 1em
+	#app-home-icon
+		aspect-ratio 1
+		height 64px
 	#app-main-content
-		padding 2em 0
-		width calc(480px + 2 * 1em)
+		padding 3em 0
+		width 480px
 	#app-main-navigation
 		align-items flex-end
 		display none
 		flex-flow column nowrap
 		gap 2em
 		height 100dvh
-		opacity 0.75
 		overflow auto
-		padding 64px 0
+		padding 4.5em 0
 		position fixed
 		right calc(50% + 315px)
-		scrollbar-width 0
-		transition opacity 1s
+		scrollbar-width none
 		top 0
-		width 200px
+		width 160px
 		&::-webkit-scrollbar
 			display none
-		&:hover
-			opacity 1
-		@media (min-width 1024px)
+		@media(min-width 1024px)
 			display flex
 	#app-secondary-content
 		display none
 		left calc(50% + 315px)
 		height 100dvh
-		opacity 0.75
 		overflow auto
-		padding 64px 0
+		padding 4.5em 0
 		position fixed
-		scrollbar-width 0
-		transition opacity 1s
+		scrollbar-width none
 		top 0
-		width 200px
+		width 160px
 		&::-webkit-scrollbar
 			display none
-		&:hover
-			opacity 1
-		@media (min-width 1024px)
-			display block
+		@media(min-width 1024px)
+			display initial
