--- a/src/ui/component/common/Button.pug
+++ b/src/ui/component/common/Button.pug
@@ -47,7 +47,7 @@ style.
 		background var(--c-shade-weak)
 		border-radius 11px
 		display inline-flex
-		font-weight bold
+		font-family var(--f-family-mono)
 		gap 5px
 		letter-spacing 0.333px
 		padding 3px 9px
@@ -71,9 +71,9 @@ style.
 		padding 0 1ch
 	.button-dropdown
 		font inherit
-		font-weight bold
+		font-family var(--f-family-mono)
 		padding-bottom 4px
 	.button-dropdown-option
 		background var(--c-theme)
-		color var(--c-theme-text)
+		color var(--c-text-strong)
 		font inherit
