--- a/src/ui/component/common/Checkbox.pug
+++ b/src/ui/component/common/Checkbox.pug
@@ -13,7 +13,7 @@ style.
 		align-items center
 		cursor pointer
 		display inline-flex
-		font-weight bold
+		font-family var(--f-family-mono)
 		gap 0.666em
 		letter-spacing 0.333px
 		user-select none
@@ -27,6 +27,6 @@ style.
 			display inline-block
 			width 1em
 		:global(&.checkbox-activated::before)
-			background-image var(--c-brand-gradient)
+			background-color var(--c-text-strong)
 	.checkbox-input
 		display none
