--- a/src/ui/component/common/Popup.pug
+++ b/src/ui/component/common/Popup.pug
@@ -28,7 +28,7 @@ style.
 		z-index 100
 	.popup-body
 		background var(--c-theme)
-		color var(--c-theme-text)
+		color var(--c-text-strong)
 		border-radius 1em
 		box-shadow 0 0 24px var(--c-blend-weak)
 		max-height 90dvh
