--- a/src/ui/component/post/PostTag.pug
+++ b/src/ui/component/post/PostTag.pug
@@ -17,11 +17,13 @@ style.
 		align-items center
 		border-radius 11px
 		display inline-flex
+		font-feature-settings 'calt', 'cpsp'
 		font-size 10px
-		font-weight bold
-		letter-spacing 1px
+		font-weight var(--f-wght-strong)
+		letter-spacing 0.666px
 		line-height 1
-		padding 5px 10px
+		height 20px
+		padding 0 10px
 		text-transform uppercase
 		user-select none
 		white-space nowrap
@@ -35,7 +37,7 @@ style.
 		background indianred
 		color white
 	.post-tag-oc
-		background cornflowerblue
+		background orangered
 		color white
 	.post-tag-spoiler
 		background black
