--- a/src/ui/component/user/UserByline.pug
+++ b/src/ui/component/user/UserByline.pug
@@ -26,12 +26,12 @@ style.
 		color var(--c-text-weak)
 		display flex
 		font-size 12px
-		letter-spacing 0.666px
+		letter-spacing 0.333px
 		line-height 1
 		gap 1ch
 		overflow hidden
-		padding 1px 7px
+		padding 2px 0
 		text-overflow ellipsis
 		white-space nowrap
 	.user-byline-name
-		font-weight bold
+		font-weight var(--f-wght-strong)
