--- a/src/ui/AppRouteUnsupported.pug
+++ b/src/ui/AppRouteUnsupported.pug
@@ -6,14 +6,22 @@ script.
 	redirect_url.hostname = 'www.reddit.com'
 	redirect_url.port = ''
 
-a#app-route-unsupported(href={redirect_url})
-	h1 Unsupported page
-	hr
-	p Sorry, this page isn't supported (or can't be supported via the API).
-	p Click anywhere in this message to view the official Reddit version.
+main#app-route-unsupported
+	a#app-route-unsupported-message(href={redirect_url})
+		h1 Unsupported page
+		hr
+		p Sorry, this page isn't supported (or can't be supported via the API).
+		p Click anywhere in this message to view the official Reddit version.
 
 style.
 	#app-route-unsupported
+		align-items center
+		display flex
+		flex-flow column nowra
+		justify-content center
+		height 100dvh
+		width 100dvw
+	#app-route-unsupported-message
 		background #ffdd5d
 		border-radius 1em
 		color black
