--- a/src/ui/component/feed/FeedSearchOptions.pug
+++ b/src/ui/component/feed/FeedSearchOptions.pug
@@ -32,26 +32,21 @@ script.
 		)
 
 menu.feed-options-search
+	Button(action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: value, feed_search_text: search_text, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } options={search_sort_options} selected={search_sort})
 	{#key search_text}
 		TextInput(autofocus={true} enter_action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: search_sort, feed_search_text: value, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } initial_value={search_text})
-	menu.feed-options-search-options
-		Button(action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: value, feed_search_text: search_text, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } options={search_sort_options} selected={search_sort})
-		{#if subreddit_search_flair_widget}
-			Button(action={() => subreddit_search_picking_flair = true} text='Flair')
-			{#if subreddit_search_picking_flair}
-				<!-- svelte-ignore a11y-no-static-element-interactions -->
-				.feed-options-search-subreddit-flair-close-handler(on:click={() => subreddit_search_picking_flair = false} on:keydown={e => { if(e.key === 'Enter') { subreddit_search_picking_flair = false } } })
-					Popup(on:close={() => subreddit_search_picking_flair = false})
-						SubredditWidget(widget={subreddit_search_flair_widget})
+	{#if subreddit_search_flair_widget}
+		Button(action={() => subreddit_search_picking_flair = true} text='Flairs...')
+		{#if subreddit_search_picking_flair}
+			<!-- svelte-ignore a11y-no-static-element-interactions -->
+			.feed-options-search-subreddit-flair-close-handler(on:click={() => subreddit_search_picking_flair = false} on:keydown={e => { if(e.key === 'Enter') { subreddit_search_picking_flair = false } } })
+				Popup(on:close={() => subreddit_search_picking_flair = false})
+					SubredditWidget(widget={subreddit_search_flair_widget})
 
 style.
 	.feed-options-search
 		display flex
-		flex-flow column nowrap
+		flex-flow inherit
 		gap 1em
-		width 100%
-	.feed-options-search-options
-		display flex
-		justify-content space-between
 	.feed-options-search-subreddit-flair-close-handler
 		position absolute
