--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -17,26 +17,26 @@ script.
 	import PostComments from './PostComments.pug'
 	import PostCommentsAutorefreshButton from './PostCommentsAutorefreshButton.pug'
 	import PostFlair from './PostFlair.pug'
-	import PostTag from './PostTag.pug'
 	import PostVideoPlayer from './PostVideoPlayer.pug'
 	import ReportDialog from '../feed/subreddit/ReportDialog.pug'
 	import Status from '../common/Status.pug'
 	import UserByline from '../user/UserByline.pug'
 	
-	export comments_initial_count = 200
+	export comments_initial_count = 100
 	export comments_sort = null
 	export expanded = true
 	export focus_comment_id = null
 	export focus_comment_parent_count = null
 	export id = null
+	export out_of_context = false
 
 	banning = false
 	comments_sort_options = [
 		{ label: 'Hot', value: 'confidence' }
 		{ label: 'Top', value: 'top' }
-		{ label: 'Q&A', value: 'qa' }
 		{ label: 'Old', value: 'old' }
 		{ label: 'New', value: 'new' }
+		{ label: 'Q&A', value: 'qa' }
 		{ label: 'Controversial', value: 'controversial' }
 	]
 	comments_sort_options_chat = [
@@ -147,50 +147,25 @@ svelte:head
 		Status(type='error' message="An unknown error occurred." title="Unknown error")
 {:else if post}
 	article.post-and-comments(class:post-and-comments-expanded={expanded})
-		article.post(class:post-downvoted={post.likes === false} class:post-upvoted={post.likes === true} data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)} title="{Time.sToAbsRelTimeStr(post.created_utc)}{post.edited ? ', edited ' + Time.sToAbsRelTimeStr(post.edited) : ''}")
-			header.post-header
-				{#if expanded}
-					section.post-meta
-						{#if api.isLoggedIn()}
-							button.post-score(data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown|stopPropagation={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown|stopPropagation={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null} title={post.hide_score ? 'score hidden' : post.score < 1 ? 'negative score (value hidden)' : post.score - 1})
-								| {score_text(post)}
-								{#if post.upvote_ratio < 0.7}
-									span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
-						{:else}
-							data.post-score(title={post.hide_score ? 'score hidden' : post.score - 1})
-								| {score_text(post)}
-								{#if post.upvote_ratio < 0.7}
-									span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
-						UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author} score={post.score} score_controversiality={1 - post.upvote_ratio} score_hidden={post.hide_score})
-						{#if post.link_flair_text || post.spoiler || post.over_18 || post.stickied || post.locked}
-							ol.post-tags
-								{#if post.link_flair_text}
-									PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} size='medium' subreddit_name={post.subreddit} text={post.link_flair_text})
-								{#if post.spoiler}
-									PostTag(name='spoiler')
-								{#if post.over_18}
-									PostTag(name='nsfw')
-								{#if post.stickied}
-									PostTag(name='sticky')
-								{#if post.locked}
-									PostTag(name='locked')
+		{#if expanded}
+			section.post-meta
+				{#if api.isLoggedIn()}
+					button.post-score(class:post-score-downvoted={post.likes === false} class:post-score-upvoted={post.likes === true} data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown|stopPropagation={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown|stopPropagation={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null} title={post.hide_score ? 'score hidden' : post.score < 1 ? 'negative score (value hidden)' : post.score - 1})
+						| {score_text(post)}
+						{#if post.upvote_ratio < 0.7}
+							span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
 				{:else}
-					section.post-stats
-						{#if post.stickied}
-							span Sticky
-							| ·
-						{#if post.spoiler}
-							span Spoiler
-							| ·
-						{#if post.over_18}
-							span NSFW
-							| ·
-						data.post-date-relative(title={Time.sToAbsTimeStr(post.created_utc)}) {Time.sToAbsRelTimeStr(post.created_utc)}
-						| ·
-						data.post-stats-score(title={post.hide_score ? 'score hidden' : post.score - 1})
-							| {score_text(post)}
-							{#if post.upvote_ratio < 0.7}
-								span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
+					data.post-score(title={post.hide_score ? 'score hidden' : post.score - 1})
+						| {score_text(post)}
+						{#if post.upvote_ratio < 0.7}
+							span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
+				UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author})
+		article.post(data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)} title="{Time.sToAbsRelTimeStr(post.created_utc)} ago ({Time.sToAbsTimeStr(post.created_utc)}){post.edited ? ', edited ' + Time.sToAbsRelTimeStr(post.edited) + ' ago' : ''}")
+			header.post-header
+				{#if out_of_context}
+					FeedLink(type='subreddit' subreddit_name={post.subreddit})
+				{:else if post.link_flair_text}
+					PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} size='medium' subreddit_name={post.subreddit} text={post.link_flair_text})
 				h1.post-title {post.title}
 			{#if expanded}
 				{#if post.removed_by_category}
@@ -210,7 +185,7 @@ svelte:head
 						Status(type='error' message="Removed by Reddit (reason not specified).")
 				{:else if focus_comment_id}
 					Status(type='warning' message="Viewing a single comment.")
-						Button(link={format_url({ post_id: id, subreddit_name: post.subreddit })} text='View full post →')
+						Button(link={format_url({ post_id: id, subreddit_name: post.subreddit })} text='View full post')
 				{:else if post.format === 'talk'}
 					Status(type='error' message="Reddit Talks are only available on the official site.")
 						Button(link='https://www.reddit.com/talk/{post.live_audio?.room_id}' new_tab={true} text='View on Reddit')
@@ -227,7 +202,7 @@ svelte:head
 											{#if !media.is_gif}
 												source(srcset={media.image_url_960})
 												source(srcset={media.image_url_640})
-											img.post-image(alt='' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; width: {media.source_width >= 480 ? '480px' : 'auto'}" title='{i + 1} / {post.media.length}')
+											img.post-image(alt='' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}" title='{i + 1} / {post.media.length}')
 									{#if media.caption_text || media.caption_url}
 										figcaption.post-gallery-image-caption
 											{#if media.caption_text}
@@ -238,7 +213,8 @@ svelte:head
 							{#if post.url}
 								{#if html_embeds(post)}
 									{@const embed = html_embeds(post)}
-										{@html embed.html}
+										.post-text
+											{@html embed.html}
 										{#if embed.script === 'twitter'}
 											script(defer='true' src='https://platform.twitter.com/widgets.js')
 								{:else if iframe_embeds(post.url)}
@@ -260,9 +236,10 @@ svelte:head
 								Button(link={post.url} new_tab={true} text='View on Reddit')
 						{:else if post.format === 'video'}
 							{@const media = post.media[0]}
-								PostVideoPlayer(audio_url={media.video_audio_url} height={480 / media.video_aspect_ratio} video_url={media.video_url} width={480})
+								PostVideoPlayer(audio_url={media.video_audio_url} height={480 * 9 / 16} video_url={media.video_url} width={480})
 						{#if post.selftext_html}
-							FormattedHTML(html={post.selftext_html})
+							.post-text
+								FormattedHTML(html={post.selftext_html})
 		{#if expanded}
 			article.post-comments
 				menu.post-comments-sort-controls
@@ -284,21 +261,14 @@ svelte:head
 
 style.
 	.post
+		background var(--c-tint-normal)
+		border-radius 1em
+		width 100%
+	.post-body
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		gap 1.333em
-		width 100%
-		.post-and-comments-expanded &
-			width calc(480px + 2 * 1em)
-	.post-body
-		align-items flex-start
-		background var(--c-tint-normal)
-		border-radius 13px
-		display inline-flex
-		flex-flow column nowrap
-		gap 0.666em
-		padding 1em
+		gap 3px
 		:global(& .twitter-tweet)
 			margin 0 !important
 		:global(& .twitter-tweet iframe)
@@ -307,37 +277,52 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 1.333em
-		margin-top 1.333em
+		margin-top 1.666em
+		width 100%
+	.post-crosspost-link
+		padding 0 1em 1em
+		width 100%
+	.post-gallery-image
 		width 100%
 	.post-gallery-image-caption
-		color var(--c-text-weak)
-		margin-top 0.333em
+		font-size 12px
+		letter-spacing 0.333px
+		padding 1em
+	.post-header
+		align-items flex-start
+		display flex
+		flex-flow column nowrap
+		gap 10px
+		padding 1em
 	.post-iframe
 		aspect-ratio 1
 		background var(--c-text-faint)
-		border-radius 11px
+		border-radius 1em
 		width 480px
 		&:fullscreen
 			border-radius 0
 	.post-image
 		background var(--c-text-faint)
-		border-radius 11px
+		border-radius 1em
+		width 100%
 	.post-link
 		font-family var(--f-family-mono)
+		font-size 1.25em
 		line-height 1.333
+		padding 0 1em 1em
 		text-decoration underline
 		word-break break-all
 	.post-meta
 		align-items center
-		background var(--c-blend-faint)
-		border-radius 4px
-		display inline-flex
-		margin-bottom 1em
+		display flex
+		gap 0.5em
+		max-width 100%
+		padding 0.333em
 	.post-predictions
 		display flex
 		flex-flow column nowrap
 		gap 1em
-		padding 1em
+		padding 0 1em 1em
 	.post-prediction-option
 		align-items center
 		display flex
@@ -345,41 +330,33 @@ style.
 		& meter
 			width 240px
 	.post-score
-		background none
-		border-radius 4px 0 0 4px
-		border-right 2px solid var(--c-theme)
+		background var(--c-blend-faint)
+		border-radius 11px
 		color var(--c-text-weak)
-		display flex
+		display inline-flex
 		font-family var(--f-family-mono)
-		font-size 1.15em
 		font-weight var(--f-wght-strong)
 		line-height 1
 		padding 1px 6px
-		.post-upvoted &
-			background var(--c-vote-up)
-			color black
-		.post-downvoted &
-			background var(--c-vote-down)
+		&.post-score-downvoted
+			opacity 0.5
+		&.post-score-upvoted
+			background var(--c-text-strong)
+			color var(--c-theme)
 	.post-score-controversial-marker
 		cursor help
 		font-size 12px
-	.post-stats
-		color var(--c-text-weak)
-	.post-stats-score
-		line-height 1
-	.post-tags
-		display flex
-		flex-flow row wrap
-		gap 0.333em
+	.post-text
+		margin-top 1em
+		padding 0 1em 1em
+		:global(& img)
+			border-radius 1em
 	.post-title
 		font-size 1.1666em
-		font-weight 500
-		letter-spacing -0.1666px
-		line-height 1.333
+		font-weight var(--f-wght-normal) !important
+		line-height 1.2
 		overflow-wrap anywhere
 		.post-and-comments-expanded &
-			font-size 2em
-			font-stretch 125%
+			font-size 1.5em
 			font-weight var(--f-wght-strong)
-			letter-spacing -1px
-			line-height 1.2
+			letter-spacing 0
