ui: work on post layout

--- a/src/ui/component/post/CommentEditor.pug
+++ b/src/ui/component/post/CommentEditor.pug
@@ -30,7 +30,7 @@ form.comment-editor
 
 style.
 	.comment-editor
-		max-width 48ch
+		max-width 480px
 	.comment-editor-actions
 		display flex
 		justify-content flex-end
