--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -147,26 +147,27 @@ svelte:head
 		Status(type='error' message="An unknown error occurred." title="Unknown error")
 {:else if post}
 	article.post-and-comments(class:post-and-comments-expanded={expanded})
-		{#if expanded}
-			section.post-meta
-				{#if api.isLoggedIn()}
-					button.post-score(class:post-score-downvoted={post.likes === false} class:post-score-upvoted={post.likes === true} data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown|stopPropagation={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown|stopPropagation={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null} title={post.hide_score ? 'score hidden' : post.score < 1 ? 'negative score (value hidden)' : post.score - 1})
-						| {score_text(post)}
-						{#if post.upvote_ratio < 0.7}
-							span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
-				{:else}
-					data.post-score(title={post.hide_score ? 'score hidden' : post.score - 1})
-						| {score_text(post)}
-						{#if post.upvote_ratio < 0.7}
-							span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
-				UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author})
 		article.post(data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)} title="{Time.sToAbsRelTimeStr(post.created_utc)} ago ({Time.sToAbsTimeStr(post.created_utc)}){post.edited ? ', edited ' + Time.sToAbsRelTimeStr(post.edited) + ' ago' : ''}")
 			header.post-header
-				{#if out_of_context}
-					FeedLink(type='subreddit' subreddit_name={post.subreddit})
-				{:else if post.link_flair_text}
-					PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} size='medium' subreddit_name={post.subreddit} text={post.link_flair_text})
+				section.post-category
+					{#if out_of_context}
+						FeedLink(type='subreddit' subreddit_name={post.subreddit})
+					{:else if post.link_flair_text}
+						PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} size='medium' subreddit_name={post.subreddit} text={post.link_flair_text})
 				h1.post-title {post.title}
+				{#if expanded}
+					section.post-meta
+						{#if api.isLoggedIn()}
+							button.post-score(class:post-score-downvoted={post.likes === false} class:post-score-upvoted={post.likes === true} data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown|stopPropagation={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown|stopPropagation={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null} title={post.hide_score ? 'score hidden' : post.score < 1 ? 'negative score (value unavailable)' : post.score - 1})
+								| {score_text(post)}
+								{#if post.upvote_ratio < 0.7}
+									span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
+						{:else}
+							data.post-score( title={post.hide_score ? 'score hidden' : post.score < 1 ? 'negative score (value unavailable)' : post.score - 1})
+								| {score_text(post)}
+								{#if post.upvote_ratio < 0.7}
+									span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
+						UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author})
 			{#if expanded}
 				{#if post.removed_by_category}
 					{#if post.removed_by_category === 'author' || post.removed_by_category === 'deleted'}
@@ -190,7 +191,7 @@ svelte:head
 					Status(type='error' message="Reddit Talks are only available on the official site.")
 						Button(link='https://www.reddit.com/talk/{post.live_audio?.room_id}' new_tab={true} text='View on Reddit')
 				{:else if post.selftext || post.format !== 'self'}
-					section.post-body
+					section.post-body(class:post-body-with-background={post.selftext_html || post.format === 'crosspost' || (post.format === 'link' && !iframe_embeds(post.url)) || post.format === 'prediction'})
 						{#if post.format === 'crosspost'}
 							a.post-crosspost-link(href={format_url({ post_id: post.crosspost_parent })})
 								svelte:self(expanded={false} id={post.crosspost_parent} out_of_context={true})
@@ -261,18 +262,27 @@ svelte:head
 
 style.
 	.post
-		background var(--c-tint-normal)
-		border-radius 1em
 		width 100%
 	.post-body
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
 		gap 3px
+		margin-top 0.333em
+		&.post-body-with-background
+			background var(--c-tint-normal)
+			border-radius 1em
+			display inline-flex
+			padding 1em
 		:global(& .twitter-tweet)
 			margin 0 !important
 		:global(& .twitter-tweet iframe)
 			border-radius 11px
+	.post-category
+		.post-and-comments-expanded &
+			bottom 100%
+			position absolute
+			width 100%
 	.post-comments
 		display flex
 		flex-flow column nowrap
@@ -280,7 +290,6 @@ style.
 		margin-top 1.666em
 		width 100%
 	.post-crosspost-link
-		padding 0 1em 1em
 		width 100%
 	.post-gallery-image
 		width 100%
@@ -292,8 +301,9 @@ style.
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		gap 10px
-		padding 1em
+		gap 0.666em
+		padding 0.333em
+		position relative
 	.post-iframe
 		aspect-ratio 1
 		background var(--c-text-faint)
@@ -309,7 +319,6 @@ style.
 		font-family var(--f-family-mono)
 		font-size 1.25em
 		line-height 1.333
-		padding 0 1em 1em
 		text-decoration underline
 		word-break break-all
 	.post-meta
@@ -317,12 +326,10 @@ style.
 		display flex
 		gap 0.5em
 		max-width 100%
-		padding 0.333em
 	.post-predictions
 		display flex
 		flex-flow column nowrap
 		gap 1em
-		padding 0 1em 1em
 	.post-prediction-option
 		align-items center
 		display flex
@@ -348,15 +355,13 @@ style.
 		font-size 12px
 	.post-text
 		margin-top 1em
-		padding 0 1em 1em
 		:global(& img)
 			border-radius 1em
 	.post-title
 		font-size 1.1666em
-		font-weight var(--f-wght-normal) !important
+		font-weight var(--f-wght-normal)
 		line-height 1.2
 		overflow-wrap anywhere
 		.post-and-comments-expanded &
-			font-size 1.5em
-			font-weight var(--f-wght-strong)
-			letter-spacing 0
+			font-size 2em
+			letter-spacing -0.333px
